services/dev-environment/k8s/networking/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: ed-namespace
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /seq
        pathType: Prefix
        backend:
          service:
            name: ed-seq
            port:
              number: 80
      - path: /rabbitmq
        pathType: Prefix
        backend:
          service:
            name: ed-rabbitmq
            port:
              number: 15672
